hphp/hack/test/typecheck/functional_generator.php.exp
File "functional_generator.php", line 28, characters 3-9:
Invalid yield (Typing[4110])
File "functional_generator.php", line 27, characters 20-30:
This is an object of type Stream
File "functional_generator.php", line 28, characters 3-9:
It is incompatible with an object of type Generator (result of function with 'yield' in the body)
